# technical-test-tausand

./: .gitignore  README.md  time_report.md
exercise_1_cumulative_sum/: README.md  main.py  pyproject.toml
exercise_2_tempico_software/: README.md
exercise_2_tempico_software/TempicoSoftware/src/: main.py
exercise_2_tempico_software/TempicoSoftware/src/Utils/: aboutDialog.py
